# Ghumio

./: README.md
Filter/: CMakeLists.txt
Filter/src/common/: filter_settings.h  settings.h
Filter/src/core/: sliding_window_filter.cc  sliding_window_filter.h
Filter/src/protobuf/: settings_messages.proto
Filter/src/test/: test_config.cc
Hardware/PixyCam/PixyReader/: CMakeLists.txt
Hardware/PixyCam/PixyReader/src/: run_pixy.cc  test_libusb.cc  test_pixys.cc  test_udev.cc
Notes/: Notes-00.txt  Notes-01.txt  (+3 more)
ProgramCommander/: CMakeLists.txt
ProgramCommander/cmake/: FindCtemplate.cmake
ProgramCommander/config/: BeaconCameraCalibrator.Camera00.Intrinsics.cfg  BeaconCameraCalibrator.Camera01.Intrinsics.cfg  CameraCalibrator.Camera00.Intrinsics.cfg  CameraCalibrator.Camera01.Intrinsics.cfg  beacon_data_publisher_camera0_calib.cfg  beacon_display.cfg  camera_intrisics_apriltag_calibration_target.cfg
ProgramCommander/data/: beacon_imu.pb.data  beacon_tags.pb.data  camera00_intrinsics.pb.data  camera01_intrinsics.pb.data  camera0_state.pb.data  camera1_state.pb.data  camera_calibration_target_final_poses.pb.data  camera_calibration_target_observations.pb.data  camera_calibration_target_starting_poses.pb.data  pixy_cam00.pb.data  pixy_cam01.pb.data  pixy_cam02.pb.data  test_kinematic_states.pb.data
ProgramCommander/src/ComponentCommander/: component.cc  component.h  component_commander.cc  component_commander.h  component_status.tpl  component_status_keeper.cc  component_status_keeper.h  component_status_keeper_factory.cc  component_status_keeper_factory.h
ProgramCommander/src/ComponentCommander/ComponentPanels/: BeaconDataQueue.html  BeaconDetector0.html  BeaconSerialMonitor.html  DataPublisher.html  DataQueue00.html  Filter00.html  FrontRangersMonitor.html  MI_HistDataPublisher.html  PixyCamera00.html  PixyCamera01.html  PixyCamera02.html  ProgramCommander.html  SyncImagesBroadcaster.html  WebCommander.html
ProgramCommander/src/DataQueue/: beacon_data_publisher.cfg  beacon_data_queue.cfg  beacon_data_queue_for_recording.cfg  calibrations_queue.cfg  data_loader.h  data_publisher_00.cfg  data_publisher_01.cfg  data_queue.cc  data_queue.h  data_queue.tpl  data_queue_00.cfg  message_file_reader.cc  message_file_reader.h  message_file_stats.cc  message_file_stats.h  message_file_writer.cc  message_file_writer.h  message_files_publisher.cc  message_files_publisher.h  message_files_publisher_status.tpl  message_files_publisher_status_keeper.cc  message_files_publisher_status_keeper.h  message_queue.cc  message_queue.h
ProgramCommander/src/Filter/: beacon_calibrator_status.tpl  beacon_filter_00.cfg  circular_pointer_queue.h  circular_queue.h  constraint.h  estimates_tracker.h  filter_00.cfg  message_factory.cc  message_factory.h  model.h  model_factory.h  observation.h  performance_tracker.h  sliding_window_filter.cc  sliding_window_filter.h  state.h  state.old.h  states_tracker.h  stereo_camera_calibration_constant_model.cc  stereo_camera_calibration_constant_model.h  time_keeper.h  timed_circular_queue.h
ProgramCommander/src/ImagesBroadcaster/: BeaconDetector0.cfg  show_save_images.cc  show_save_images.h  show_save_images.tpl  show_save_images00.cfg  sync_images_broadcaster.cc  sync_images_broadcaster.h  sync_images_broadcaster.tpl  sync_images_broadcaster00.cfg
ProgramCommander/src/Models/: ModelsLib0.h  ModelsLib1.h  beacon_filter.cc  beacon_model.cc  beacon_model.h  camera_calibration_filter.h  camera_calibration_filter.old.h  camera_calibration_target_motion_filter.h  camera_calibration_target_motion_filter.old.h  camera_intrinsics_filter.cc  file_messages_keeper.h  machine_model.cc  model.h  run_camera_calibration_filter.cc  test_batch_vio.cc  test_calibration_target_motion_filter.cc  test_camera_calibration_filter.cc  test_models.cc
ProgramCommander/src/Models/PlotScripts/: demo_sphere.gnu  plot_ellipses.data  plot_kin_accl.gnu  plot_kin_control.gnu  plot_kin_control_1.gnu  plot_kin_control_1_rotn.gnu  plot_kin_control_2.gnu  plot_kin_control_2_rotn.gnu  plot_kin_control_3_rotn.gnu  plot_kin_control_4.gnu  plot_kin_control_4_rotn.gnu  plot_kin_control_5_rotn.gnu  plot_kin_omega.gnu  plot_kin_omega_1.gnu  plot_kin_omega_2.gnu  plot_kin_omega_3.gnu  plot_kin_posn.gnu  plot_kin_posn_1.gnu  plot_kin_posn_2.gnu  plot_kin_posn_3.gnu  plot_kin_rotn.gnu  plot_kin_rotn_1.gnu  plot_kin_rotn_2.gnu  plot_kin_rotn_3.gnu  plot_kin_states_2d.gnu  plot_kin_velo.gnu  plot_kin_velo_1.gnu  plot_kin_velo_2.gnu
ProgramCommander/src/PixyBroadcaster/: PixyCamera00.cfg  PixyCamera01.cfg  PixyCamera02.cfg  pixy_camera.h  pixy_camera.tpl  pixy_camera_component.cc  pixy_camera_component.h
ProgramCommander/src/Protobuf/: configurations.proto  programs_setup.proto  sensor_messages.proto  state_messages.proto  status_messages.proto
ProgramCommander/src/SerialBroadcaster/: beacon_serial_monitor.cc  beacon_serial_monitor.cfg  beacon_serial_monitor.h  front_rangers_monitor.cc  front_rangers_monitor.cfg  front_rangers_monitor.h
ProgramCommander/src/Utilities/: common_config.h.in  common_functions.cc  common_functions.h  configuration_factory.cc  configuration_factory.h
ProgramCommander/src/Viewer/: .qglviewer.xml  Makefile  dynamic_scene.cc  dynamic_scene.h  scene.cc  scene.h  test_viewer.cc  test_viewer.pro  viewer  viewer.cc  viewer.h
ProgramCommander/src/test/: cam1_apriltags.pb.data  cam1_mono_calib_no_distort.pb.data  cam2_apriltags.pb.data  cam2_mono_calib_no_distort.pb.data  cam3_apriltags.pb.data  cam3_mono_calib_no_distort.pb.data  cam4_apriltags.pb.data  cam4_mono_calib_no_distort.pb.data  extras_node.cfg  machine_interface.pb.data  run_pixy_camera.cc  test.cfg  test_beacon_serial_monitor.cc  test_component.cc  test_component_commander.cc  test_data_publisher.cc  test_data_queue.cc  test_filter.cc  test_fork.cc  test_front_rangers_monitor.cc  test_message_file_readwrite.cc  test_message_queue.cc  test_monocular_features_tracker.cc  test_node.cfg  test_node_01.cfg  test_pixy_camera.cc  test_proto_fork.cc  test_show_save_images.cc  test_sync_images_broadcaster.cc
(+89 files in other folders)
